--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
     "@ngu/carousel": "^4.0.0",
     "@ngx-translate/core": "^13.0.0",
     "@ngx-translate/http-loader": "^6.0.0",
+    "animated-slider": "^1.1.6",
+    "hammerjs": "^2.0.8",
     "rxjs": "~6.6.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.11.4"
